verified algorithm